almost_perfect_grid_website

--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
         <!-- Hero Img -->
         <div class="hero-img">
           <img
-            id="hero-img"
             src="./img/vasilis-chatzopoulos-6lwyzronth8-unsplash.png"
             alt="beautiful-graphics"
           />
@@ -85,32 +84,31 @@
           </p>
           <a href="#"><button>READ MORE</button></a>
         </div>
-        <div class="text">
-          <h2 class="text-title">New</h2>
+      </div>
+      <div class="text">
+        <h2 class="text-title">New</h2>
 
-          <!-- Text Block -->
+        <!-- Text Block -->
+        <div>
+          <h3 class="text-1">Hydrogen VS Electric Cars</h3>
+          <p class="text-p-1">
+            Will hydrogen-fueled cars ever catch up to EVs?
+          </p>
+        </div>
 
-          <div>
-            <h3 class="text-1">Hydrogen VS Electric Cars</h3>
-            <p class="text-p-1">
-              Will hydrogen-fueled cars ever catch up to EVs?
-            </p>
-          </div>
-
-          <div>
-            <h3 class="text-2">The Downsides of AI Artistry</h3>
-            <p class="text-p-2">
-              What are the possible adverse effects of on-demand AI image
-              generation?
-            </p>
-          </div>
-          <div>
-            <h3 class="text-3">Is VC Funding Drying Up?</h3>
-            <p class="text-p-3">
-              Private funding by VC firms is down 50% YOY. We take a look at
-              what that means.
-            </p>
-          </div>
+        <div>
+          <h3 class="text-2">The Downsides of AI Artistry</h3>
+          <p class="text-p-2">
+            What are the possible adverse effects of on-demand AI image
+            generation?
+          </p>
+        </div>
+        <div>
+          <h3 class="text-3">Is VC Funding Drying Up?</h3>
+          <p class="text-p-3">
+            Private funding by VC firms is down 50% YOY. We take a look at what
+            that means.
+          </p>
         </div>
       </div>
     </div>
@@ -120,7 +118,7 @@
       <container class="gallery">
         <a href="#">
           <div class="gallery-item-1 gallery-item">
-            <div class="img-1"><img src="./img/Bitmap.png" alt="" /></div>
+            <div class="img-1 "><img src="./img/Bitmap.png" alt="" /></div>
             <div class="img-text">
               <h2>01</h2>
               <h3>Reviving Retro PCs</h3>
